# minion

./: .gitignore  Cargo.toml  Dockerfile  README.md  bors.toml
.cargo/: config
.github/workflows/: publish.yml  rust.yml
ci/: linux.sh  windows-build.ps1  windows.ps1
minion-cli/: Cargo.toml
minion-cli/src/: main.rs
minion-codegen/: Cargo.toml
minion-codegen/src/: main.rs  seccomp_policies.rs
minion-ffi/: Cargo.toml  build.rs
minion-ffi/src/: lib.rs
minion-ffi/tests/: CMakeLists.txt
minion-tests/: Cargo.toml
minion-tests/src/: main.rs  master.rs  tests.rs  worker.rs
minion-tests/src/tests/: simple.rs
src/: check.rs  command.rs  erased.rs  lib.rs  linux.rs  util.rs  windows.rs
src/linux/: cgroup.rs  check.rs  dominion.rs  error.rs  fd.rs  ipc.rs  jail_common.rs  limits.rs  pipe.rs  sandbox.rs  seccomp.rs  uid_alloc.rs  util.rs  wait.rs  zygote.rs
src/linux/cgroup/: detect.rs  v1.rs  v2.rs
src/linux/limits/: cgroup_common.rs  cgroup_v1.rs  cgroup_v2.rs  prlimit.rs
src/linux/sandbox/: watchdog.rs
src/linux/seccomp/: gen.rs
src/linux/wait/: mio.rs
src/linux/zygote/: cgroup.rs  main_loop.rs  setup.rs
src/windows/: child.rs  constrain.rs  error.rs  isolate.rs  pipe.rs  sandbox.rs  spawn.rs  util.rs  wait.rs
src/windows/spawn/: attr_list.rs
uml-ci/: main.sh  payload.sh  uml-setup.sh  uml-slirp.sh  uml-ssh.sh
