[package]
name = "minion"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
libc = "0.2.88"
errno = "0.2.7"
rand = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
nix = "0.20.0"
backtrace = "0.3.56"
thiserror = "1.0.24"
anyhow = "1.0.38"
once_cell = "1.7.2"
futures-util = "0.3.13"
tokio = { version = "1.2.0", features = ["net"] }
tracing = "0.1.25"
itoa = "0.4.7"
parking_lot = "0.11.1"
procfs = { git = "https://github.com/eminence/procfs" }

[workspace]
members = ["minion-ffi", ".", "minion-tests", "minion-cli"]
