[package]
name = "minion"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[features]
# Never enable this feature. Its only consumer is minion-tests
internal_dev = []

[dependencies]
libc = "0.2.91"
errno = "0.2.7"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
nix = "0.20.0"
backtrace = "0.3.56"
thiserror = "1.0.24"
anyhow = "1.0.39"
once_cell = "1.7.2"
futures-util = "0.3.13"
tokio = { version = "1.8.4", features = ["net", "time", "rt"] }
tracing = "0.1.25"
itoa = "0.4.7"
parking_lot = "0.11.1"
procfs = { git = "https://github.com/eminence/procfs" }
crossbeam-channel = "0.5.0"

[workspace]
members = ["minion-ffi", ".", "minion-tests", "minion-cli", "minion-codegen"]
