[package]
name = "minion-ffi"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.37"
minion = {path = ".."}
tokio = {version = "0.3.2", features = ["rt", "time"]}

[build-dependencies]
cbindgen = { version = "0.14.1", default-features = false }
