[package]
name = "minion-ffi"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
minion = {path = ".."}
tokio = { version = "1.1.0", features = ["rt", "time"] }

[build-dependencies]
cbindgen = { version = "0.16.0", default-features = false }
