[package]
name = "minion-tests"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
once_cell = "1.5.2"
minion = {path = ".."}
clap = "3.0.0-beta.2"
nix = "0.19.1"
tempfile = "3.2.0"
tokio = { version = "1.2.0", features = ["macros", "rt"] }
tracing-subscriber = "0.2.15"
