[package]
name = "minion-tests"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
once_cell = "1.7.2"
minion = {path = "..", features = ["internal_dev"]}
clap = "3.0.0-beta.2"
nix = "0.21.0"
tempfile = "3.2.0"
tokio = { version = "1.6.1", features = ["macros", "rt"] }
tracing-subscriber = "0.2.18"
tracing = "0.1.26"
